--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
